--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.4",
     "hbs": "^4.0.1",
+    "serve-favicon": "^2.4.3",
     "stylus": "^0.54.5"
   }
 }
